--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Manuel Ulate",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.8.6",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
