--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "env-var": "^7.5.0",
     "express": "^4.21.1"
   }
 }
